@@ -1,5 +1,10 @@
 IN DEVELOPMENT
 
+  IMPROVEMENTS:
+
+    * ``bzr log -rA..B`` output shifted to the left margin if the log only 
+      contains merge revisions. (Kent Gibson) 
+
   INTERNALS:
     * Rework of LogFormatter API to provide beginning/end of log hooks and to
       encapsulate the details of the revision to be logged in a LogRevision
